--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "express-grip",
-    "version": "1.0.0",
+    "version": "1.0.1",
     "author": "Fanout, Inc. <info@fanout.io>",
     "description": "Express GRIP library",
     "contributors": [
@@ -26,6 +26,7 @@
         "express"
     ],
     "dependencies": {
+	"pubcontrol": "1.x",
         "grip": ">=1.2.3 <2.0.0",
         "jwt-simple": "0.x",
         "jspack": "0.x"
