--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "express-grip",
+  "name": "@fanoutio/express-grip",
   "version": "1.2.1",
   "author": "Fanout, Inc. <info@fanout.io>",
   "description": "Express GRIP library",
@@ -7,6 +7,10 @@
     {
       "name": "Konstantin Bokarius",
       "email": "kon@fanout.io"
+    },
+    {
+      "name": "Katsuyuki Ohmuro",
+      "email": "harmony7@pex2.jp"
     }
   ],
   "main": "./lib/express_grip",
@@ -26,9 +30,9 @@
     "express"
   ],
   "dependencies": {
-    "grip": "^1.3.0",
-    "jspack": "0.0.4",
-    "pubcontrol": "^1.2.0"
+    "@fanoutio/grip": "^1.3.0",
+    "@fanoutio/pubcontrol": "^1.2.0",
+    "jspack": "0.0.4"
   },
   "license": "MIT"
 }
