--- a/package.json
+++ b/package.json
@@ -13,7 +13,25 @@
       "email": "harmony7@pex2.jp"
     }
   ],
-  "main": "./lib/express_grip",
+  "type": "commonjs",
+  "main": "./esm/main.mjs",
+  "module": "./esm/main.mjs",
+  "scripts": {
+    "prepublishOnly": "npm run build",
+    "build": "npm run build-esm && npm run build-commonjs && npm run build-browser",
+    "build-esm": "npm run build-esm:clean && npm run build-esm:build",
+    "build-esm:clean": "rimraf esm",
+    "build-esm:build": "rollup -c rollup.esm.config.js",
+    "build-commonjs": "npm run build-commonjs:clean && npm run build-commonjs:build",
+    "build-commonjs:clean": "rimraf commonjs",
+    "build-commonjs:build": "rollup -c rollup.commonjs.config.js",
+    "build-browser": "npm run build-browser:clean && npm run build-browser:build",
+    "build-browser:clean": "rimraf browser",
+    "build-browser:build": "rollup -c rollup.browser.config.js",
+    "lint": "npm run lint:eslint",
+    "lint:eslint": "eslint --ext=.js,.mjs src/* tests/*",
+    "test": "node --experimental-modules tests/index.mjs"
+  },
   "repository": {
     "type": "git",
     "url": "https://github.com/fanout/express-grip.git"
@@ -30,9 +48,34 @@
     "express"
   ],
   "dependencies": {
-    "@fanoutio/grip": "^1.3.0",
-    "@fanoutio/pubcontrol": "^1.2.0",
+    "@fanoutio/grip": "^2.0.0-beta.0",
+    "@fanoutio/pubcontrol": "^2.0.0-beta.10",
+    "express": "^4.17.1",
     "jspack": "0.0.4"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.7.5",
+    "@babel/plugin-proposal-class-properties": "^7.7.4",
+    "@babel/plugin-proposal-nullish-coalescing-operator": "^7.8.0",
+    "@babel/plugin-proposal-optional-chaining": "^7.8.0",
+    "@babel/plugin-transform-runtime": "^7.7.6",
+    "@babel/preset-env": "^7.7.6",
+    "@babel/runtime-corejs3": "^7.7.6",
+    "@rollup/plugin-commonjs": "^11.0.1",
+    "@rollup/plugin-json": "^4.0.1",
+    "@rollup/plugin-replace": "^2.3.0",
+    "babel-eslint": "^10.0.3",
+    "buffer": "^5.4.3",
+    "builtin-modules": "^3.1.0",
+    "core-js": "^3.6.3",
+    "eslint": "^6.7.2",
+    "regenerator-runtime": "^0.13.3",
+    "rimraf": "^3.0.0",
+    "rollup": "^1.29.0",
+    "rollup-plugin-babel": "^4.3.3",
+    "rollup-plugin-node-builtins": "^2.1.2",
+    "rollup-plugin-node-globals": "^1.4.0",
+    "rollup-plugin-node-resolve": "^5.2.0"
   },
   "license": "MIT"
 }
