--- a/package.json
+++ b/package.json
@@ -13,24 +13,22 @@
       "email": "harmony7@pex2.jp"
     }
   ],
-  "type": "commonjs",
-  "main": "./esm/main.mjs",
-  "module": "./esm/main.mjs",
+  "main": "./build/index.js",
+  "module": "./build/index.es.js",
+  "jsnext:main": "build/index.es.js",
+  "types": "build/main.d.ts",
   "scripts": {
     "prepublishOnly": "npm run build",
-    "build": "npm run build-esm && npm run build-commonjs && npm run build-browser",
-    "build-esm": "npm run build-esm:clean && npm run build-esm:build",
-    "build-esm:clean": "rimraf esm",
-    "build-esm:build": "rollup -c rollup.esm.config.js",
+    "build": "npm run build-commonjs && npm run build-browser",
     "build-commonjs": "npm run build-commonjs:clean && npm run build-commonjs:build",
-    "build-commonjs:clean": "rimraf commonjs",
+    "build-commonjs:clean": "rimraf build",
     "build-commonjs:build": "rollup -c rollup.commonjs.config.js",
     "build-browser": "npm run build-browser:clean && npm run build-browser:build",
     "build-browser:clean": "rimraf browser",
     "build-browser:build": "rollup -c rollup.browser.config.js",
     "lint": "npm run lint:eslint",
-    "lint:eslint": "eslint --ext=.js,.mjs src/* tests/*",
-    "test": "node --experimental-modules tests/index.mjs"
+    "lint:eslint": "eslint --ext=.js src/* tests/*",
+    "test": "TS_NODE_FILES=true TS_NODE_COMPILER_OPTIONS='{\"module\":\"commonjs\"}' mocha -r ts-node/register tests/*.ts"
   },
   "repository": {
     "type": "git",
@@ -48,34 +46,30 @@
     "express"
   ],
   "dependencies": {
-    "@fanoutio/grip": "^2.0.0-beta.0",
-    "@fanoutio/pubcontrol": "^2.0.0-beta.10",
+    "@fanoutio/grip": "^2.0.0-rc.2",
+    "@fanoutio/pubcontrol": "^2.1.4",
     "express": "^4.17.1",
     "jspack": "0.0.4"
   },
   "devDependencies": {
-    "@babel/core": "^7.7.5",
-    "@babel/plugin-proposal-class-properties": "^7.7.4",
-    "@babel/plugin-proposal-nullish-coalescing-operator": "^7.8.0",
-    "@babel/plugin-proposal-optional-chaining": "^7.8.0",
-    "@babel/plugin-transform-runtime": "^7.7.6",
-    "@babel/preset-env": "^7.7.6",
-    "@babel/runtime-corejs3": "^7.7.6",
-    "@rollup/plugin-commonjs": "^11.0.1",
-    "@rollup/plugin-json": "^4.0.1",
-    "@rollup/plugin-replace": "^2.3.0",
-    "babel-eslint": "^10.0.3",
-    "buffer": "^5.4.3",
-    "builtin-modules": "^3.1.0",
-    "core-js": "^3.6.3",
-    "eslint": "^6.7.2",
-    "regenerator-runtime": "^0.13.3",
+    "@rollup/plugin-commonjs": "^11.0.2",
+    "@rollup/plugin-json": "^4.0.2",
+    "@rollup/plugin-node-resolve": "^7.1.1",
+    "@rollup/plugin-replace": "^2.3.1",
+    "@rollup/plugin-typescript": "^3.0.0",
+    "@types/express": "^4.17.3",
+    "@types/mocha": "^7.0.2",
+    "eslint": "^6.8.0",
+    "mocha": "^7.1.1",
     "rimraf": "^3.0.0",
-    "rollup": "^1.29.0",
-    "rollup-plugin-babel": "^4.3.3",
+    "rollup": "^1.32.0",
     "rollup-plugin-node-builtins": "^2.1.2",
     "rollup-plugin-node-globals": "^1.4.0",
-    "rollup-plugin-node-resolve": "^5.2.0"
+    "rollup-plugin-peer-deps-external": "^2.2.2",
+    "rollup-plugin-typescript2": "^0.26.0",
+    "ts-node": "^8.6.2",
+    "tslib": "^1.11.1",
+    "typescript": "^3.8.3"
   },
   "license": "MIT"
 }
