--- a/demo/http/package.json
+++ b/demo/http/package.json
@@ -2,15 +2,15 @@
   "name": "http-demo",
   "version": "1.0.0",
   "description": "",
-  "main": "server.js",
+  "main": "server.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "node server.js test"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@fanoutio/grip": "^2.0.0-beta.0",
+    "@fanoutio/grip": "^2.0.0-rc.2",
     "express": "^4.17.1"
   }
 }
