--- a/demo/http-typescript/package.json
+++ b/demo/http-typescript/package.json
@@ -10,7 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@fanoutio/grip": "^2.0.0-rc.2",
+    "@fanoutio/grip": "^2.0.0",
     "express": "^4.17.1",
     "ts-node": "^8.8.2",
     "typescript": "^3.8.3"
