--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@fanoutio/express-grip",
-  "version": "2.0.0-beta.1",
+  "version": "2.0.0",
   "author": "Fanout, Inc. <info@fanout.io>",
   "description": "Express GRIP library",
   "contributors": [
