--- a/package.json
+++ b/package.json
@@ -26,8 +26,8 @@
     "build-browser": "npm run build-browser:clean && npm run build-browser:build",
     "build-browser:clean": "rimraf browser",
     "build-browser:build": "rollup -c rollup.browser.config.js",
-    "lint": "npm run lint:eslint",
-    "lint:eslint": "eslint --ext=.js src/* tests/*",
+    "lint": "npm run lint:tslint",
+    "lint:tslint": "tslint -c tslint.json 'src/**/*.ts' 'test/**/*.ts'",
     "test": "TS_NODE_FILES=true TS_NODE_COMPILER_OPTIONS='{\"module\":\"commonjs\"}' mocha -r ts-node/register tests/*.ts"
   },
   "repository": {
@@ -59,7 +59,6 @@
     "@rollup/plugin-typescript": "^3.0.0",
     "@types/express": "^4.17.3",
     "@types/mocha": "^7.0.2",
-    "eslint": "^6.8.0",
     "mocha": "^7.1.1",
     "rimraf": "^3.0.0",
     "rollup": "^1.32.0",
@@ -69,6 +68,7 @@
     "rollup-plugin-typescript2": "^0.26.0",
     "ts-node": "^8.6.2",
     "tslib": "^1.11.1",
+    "tslint": "^6.1.1",
     "typescript": "^3.8.3"
   },
   "license": "MIT"
